--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -26,21 +26,20 @@
                 <!-- Template Row -->
                 <% for (let count = 0; count < books.length; count++) { %>
                 <tr>
+                  
                   <td><%= books[count].Title %></td>
                   <td class="text-center">$<%= books[count].Price %></td>
                   <td class="text-center"><%= books[count].Author %></td>
                   <td class="text-center"><%= books[count].Genre %></td>
 
                   <td class="text-center">
-                    <!-- ------------------------ -->
-                    <!-- ADD the EDIT BUTTON HERE -->
-                    <!-- ------------------------ -->
+                    <a href="books/details/<%=books[count]._id %>" 
+                      class="btn btn-primary"><i class="fa fa-pencil-square-o"></i> Edit</a
                   </td>
 
                   <td class="text-center">
-                    <!-- ------------------------ -->
-                    <!-- ADD the DELETE BUTTON HERE -->
-                    <!-- ------------------------ -->
+                      <a href="books/<%=books[count]._id %>"
+                        class="btn btn-danger"><i class="fa fa-trash-o"></i> Delete</a>
                   </td>
                 </tr>
                 <% } %>
