--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -31,12 +31,12 @@
                   <td class="text-center"><%= books[count].Genre %></td>
 
                   <td class="text-center">
-                    <a href="books/details/<%=books[count]._id %>" 
+                    <a href="/books/details/<%=books[count]._id %>" 
                       class="btn btn-primary"><i class="fa fa-pencil-square-o"></i> Edit</a
                   </td>
 
                   <td class="text-center">
-                      <a href="books/<%=books[count]._id %>"
+                      <a href="/books/<%=books[count]._id %>"
                         class="btn btn-danger"><i class="fa fa-trash-o"></i> Delete</a>
                   </td>
                 </tr>
